--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
       <img src="images/kitty-3.png" alt="kitty 3">
     </div>
 
-    <div id="ball"><img src="images/kitty-4.png" alt="kitty 4"></div>
+    <div id="ball"><img src="images/kitty-4.png" alt="kitty 4">
+    </div>
     
+    <!-- .wrapper -->
     
-
-  </div><!-- .wrapper -->
   <audio id="player1">
     <source src="audio/purrr.mp3" type="audio/mp3">
     <source src="audio/purrr.ogg" type="audio/ogg">
   </audio>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/purr-click.js"></script>
 </body>
