--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     
     <!-- .wrapper -->
     
-  <audio id="player1">
+  <div id="player1">
     <source src="audio/purrr.mp3" type="audio/mp3">
     <source src="audio/purrr.ogg" type="audio/ogg">
-  </audio>
+  </div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/purr-click.js"></script>
