automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/place-kitty.css">
 </head>
 <body>
-  <div class="wrapper">
+  <aufio class="wrapper">
     <!-- Wheelbarrow -->
     <div id="wheelbarrow"></div>
     <div id="wheelbarrow-foreground"></div>
