--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/place-kitty.css">
 </head>
 <body>
-  <aufio class="wrapper">
+  <div class="wrapper">
     <!-- Wheelbarrow -->
     <div id="wheelbarrow"></div>
     <div id="wheelbarrow-foreground"></div>
@@ -30,10 +30,10 @@
     
     <!-- .wrapper -->
     
-  <div id="player1">
+  <audio id="player1">
     <source src="audio/purrr.mp3" type="audio/mp3">
     <source src="audio/purrr.ogg" type="audio/ogg">
-  </div>
+  </audio>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/purr-click.js"></script>
